今天的题都好阴间
1017，1018有点轻敌了，还是要慎重对待PAT的，这种题就差在细节上。

--- a/重点题.md
+++ b/重点题.md
@@ -3,6 +3,8 @@
 1014 注意审题，17：00之后不能新开服务，但已经在办理的是可以继续的；另外以cur表示时间的结束。比如cur=5，说明已经过去了5分钟，而不是第5分钟开始，所以循环的终止条件是cur<540，不是<=
 1015 判断质数的时候注意1，2，3，4特判一下
 1016 傻逼题，当一个客户没有消费的时候，不需要输出！！！！！！但是题上根本没说好吧？
+1017 注意，可能窗口当前空闲，但没有顾客来；那么窗口要等到客户来，它下一次空闲的时间不是前一次时间+顾客服务时间，而是顾客到来时间+服务时间
+1018 一开始想简单了，直接把所有的算一起了，实际上不是的。只有去的时候可以分配车子，回来是直接回到PBMC的。这意味着，<font color=red>如果当前车站缺少车辆，只能用之前车站多的去补，不够的从PBMC带，而不能拿之后的车站多的车辆去补</font>
 
 
 
