--- a/重点题.md
+++ b/重点题.md
@@ -5,7 +5,18 @@
 1016 傻逼题，当一个客户没有消费的时候，不需要输出！！！！！！但是题上根本没说好吧？
 1017 注意，可能窗口当前空闲，但没有顾客来；那么窗口要等到客户来，它下一次空闲的时间不是前一次时间+顾客服务时间，而是顾客到来时间+服务时间
 1018 一开始想简单了，直接把所有的算一起了，实际上不是的。只有去的时候可以分配车子，回来是直接回到PBMC的。这意味着，<font color=red>如果当前车站缺少车辆，只能用之前车站多的去补，不够的从PBMC带，而不能拿之后的车站多的车辆去补</font>
-
+1021 树直径两端可能不是叶子？注释掉就ＡＣ，不注释就ＷＡ
+1022 用getline读取一行的用法是getline(cin,s)，另外要注意如果之前有cin，直接getline会读换行符；当读取一行用空格分开的string时，可以用istringstream来分离出每一个string
+```C++
+getline(cin,k);
+istringstream kk(k);
+string kw;
+vector<string>gr;
+while(kk>>kw){
+    gr.push_back(kw);
+}
+```
+1024 反复加100次之后不是N\*100，是$N\times 2^100$
 
 
 
