--- a/重点题.md
+++ b/重点题.md
@@ -17,6 +17,12 @@ while(kk>>kw){
 }
 ```
 1024 反复加100次之后不是N\*100，是$N\times 2^100$
+1025 排序记录排名的时候，1、同分同序 2、rank1直接赋值，然后从2开始循环，直接让1和0比较会WA3
+1033 不要忽视油箱的作用，它可以存油。在一个很便宜的加油站加满油，意味着即便在下一个加油站加了油，也可能用的上一个加油站没用完的油
+1034 1、要求输出按gang_head字典序 2、两个人可能多次通话，记录时+=，不要=
+1035 单数输出is，复数输出are，不要只看到account
+1037 排序是从小到大排，所以计算的时候从后往前算。如果从前往后算，{3，9}-{3}算出的结果就是9不是27了
+1038 我只考虑了去掉相同部分的一位，导致{3234，32}和{3231，32}会有完全相同的结果，如果再往后操作就复杂了。直接A+B\< B+A的判断是最优的
 
 
 
