重点题加上换行

--- a/重点题.md
+++ b/重点题.md
@@ -1,11 +1,20 @@
 [1010](https://blog.csdn.net/Luowaterbi/article/details/114150529) 当存在单调性的时候，并且遍历太大的时候，可以用二分。
+
 1012 平均分不保留小数；相同分数要排名相同，比如1 2 3 3 5 
-1014 注意审题，17：00之后不能新开服务，但已经在办理的是可以继续的；另外以cur表示时间的结束。比如cur=5，说明已经过去了5分钟，而不是第5分钟开始，所以循环的终止条件是cur<540，不是<=
+
+1014 注意审题，17：00之后不能新开服务，但已经在办理的是可以继续的；另外以cur表示时间的结束。比如
+cur=5，说明已经过去了5分钟，而不是第5分钟开始，所以循环的终止条件是cur<540，不是<=
+
 1015 判断质数的时候注意1，2，3，4特判一下
+
 1016 傻逼题，当一个客户没有消费的时候，不需要输出！！！！！！但是题上根本没说好吧？
+
 1017 注意，可能窗口当前空闲，但没有顾客来；那么窗口要等到客户来，它下一次空闲的时间不是前一次时间+顾客服务时间，而是顾客到来时间+服务时间
+
 1018 一开始想简单了，直接把所有的算一起了，实际上不是的。只有去的时候可以分配车子，回来是直接回到PBMC的。这意味着，<font color=red>如果当前车站缺少车辆，只能用之前车站多的去补，不够的从PBMC带，而不能拿之后的车站多的车辆去补</font>
+
 1021 树直径两端可能不是叶子？注释掉就ＡＣ，不注释就ＷＡ
+
 1022 用getline读取一行的用法是getline(cin,s)，另外要注意如果之前有cin，直接getline会读换行符；当读取一行用空格分开的string时，可以用istringstream来分离出每一个string
 ```C++
 getline(cin,k);
@@ -17,11 +26,17 @@ while(kk>>kw){
 }
 ```
 1024 反复加100次之后不是N\*100，是$N\times 2^100$
+
 1025 排序记录排名的时候，1、同分同序 2、rank1直接赋值，然后从2开始循环，直接让1和0比较会WA3
+
 1033 不要忽视油箱的作用，它可以存油。在一个很便宜的加油站加满油，意味着即便在下一个加油站加了油，也可能用的上一个加油站没用完的油
+
 1034 1、要求输出按gang_head字典序 2、两个人可能多次通话，记录时+=，不要=
+
 1035 单数输出is，复数输出are，不要只看到account
+
 1037 排序是从小到大排，所以计算的时候从后往前算。如果从前往后算，{3，9}-{3}算出的结果就是9不是27了
+
 1038 我只考虑了去掉相同部分的一位，导致{3234，32}和{3231，32}会有完全相同的结果，如果再往后操作就复杂了。直接A+B\< B+A的判断是最优的
 
 
